# Diamond-Hydrogen

./: README.md  cd-100.vasp  cd-111.vasp  pyproject.toml  vasp_tools.py
diamond_hydrogen/: __init__.py
src/diamond_hydrogen/: diamond_hydrogen.py  vasp_tools.py
trunk/: cd-110.vasp
