[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diamond-hydrogen"
version = "0.1.0"
description = "Utility to create diamond - hydrogen interfaces for VASP simulations"
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "numpy",
]

[project.scripts]
diamond-hydrogen = "diamond_hydrogen.diamond_hydrogen:main"
